move unused jane/core/map/*.java to jane/test/map/; add experimental G1 param in start.bat/sh